# Berit

./: .env  .env.example  .gitignore  ANALYSIS-SKILLS-TOOLS.md  CLAUDE.md  Makefile  PLAN-SCB-MCP-V2.md  PLAN-SCB-MCP.md  README.md  SETUP.md  config.yaml  extensions_config.example.json  plan.md  render-skolverket.yaml  render.yaml  render_avanza.yaml
mcp-tools/avanza-mcp/: CLAUDE.md  DEVELOPMENT.md  LICENSE.md  README.md  http_server.py  justfile  pyproject.toml
mcp-tools/avanza-mcp/.github/: PUBLISHING.md
mcp-tools/avanza-mcp/.github/workflows/: ci.yml  publish.yml
mcp-tools/avanza-mcp/src/avanza_mcp/: __init__.py
mcp-tools/avanza-mcp/src/avanza_mcp/client/: __init__.py  base.py  endpoints.py  exceptions.py
mcp-tools/avanza-mcp/src/avanza_mcp/models/: __init__.py  certificate.py  chart.py  common.py  etf.py  filter.py  fund.py  future_forward.py  instrument_data.py  search.py  stock.py  warrant.py
mcp-tools/avanza-mcp/src/avanza_mcp/prompts/: __init__.py  analysis.py  workflows.py
mcp-tools/avanza-mcp/tests/: __init__.py  conftest.py
mcp-tools/avanza-mcp/tests/integration/: __init__.py  test_certificates_integration.py  test_chart_integration.py  test_etfs_integration.py  test_futures_forwards_integration.py  test_instrument_data_integration.py  test_tools.py  test_warrants_integration.py
mcp-tools/avanza-mcp/tests/unit/: __init__.py  test_certificate_models.py  test_chart_models.py  test_client.py  test_etf_models.py  test_filter_models.py  test_future_forward_models.py  test_instrument_data_models.py  test_models.py  test_warrant_models.py
(+536 files in other folders)
