[project]
name = "avanza-mcp"
dynamic = ["version"]
description = "MCP server for Avanza public market data API - Swedish stocks, funds, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.0.0b1",
    "httpx>=0.28.1,<1.0",
    "httpx-sse>=0.4.3",
    "pydantic>=2.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
avanza-mcp = "avanza_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avanza_mcp"]

[tool.hatch.version]
path = "src/avanza_mcp/__init__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may hit real APIs)",
]
